# shopping-cart-haskell

./: .gitignore  CHANGELOG.md  Main.hs  README.md  default.nix  docker-compose.yml  hie.yaml  shell.nix  shopping-cart.cabal  shopping-cart.nix
.github/workflows/: ci.yml  haskell.yml
app/: Main.hs
nix/: pkgs.nix
src/: Logger.hs  Orphan.hs  Resources.hs  Services.hs
src/Algebras/: Brands.hs
src/Domain/: Brand.hs  Cart.hs  Category.hs  Checkout.hs  Item.hs  Order.hs  Payment.hs  User.hs
src/Effects/: Background.hs  Logger.hs  Retry.hs
src/Http/: Client.hs  Handler.hs  Params.hs  Server.hs
src/Http/Clients/: Payments.hs
src/Http/Routes/: Brands.hs  Cart.hs  Checkout.hs  Items.hs  Orders.hs  Version.hs
src/Programs/: Checkout.hs
src/Refined/: HasDigits.hs  Helper.hs  Instances.hs
src/Services/: Brands.hs  Items.hs  Orders.hs  ShoppingCart.hs
src/Utils/: Errors.hs  Lift.hs  Redis.hs  Text.hs
test/: Main.hs
test/Payments/: Test.hs
test/Utils/: TextTest.hs
