cabal-version:       >=1.10

name:                shopping-cart
version:             0.1.0.0
synopsis:            The Shopping Cart developed in PFP Scala for Haskell
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Domain.Brand
                     , Domain.Category
                     , Domain.Cart
                     , Domain.Checkout
                     , Domain.Item
                     , Domain.Order
                     , Domain.Payment
                     , Domain.User
                     , Http.Client
                     , Http.Clients.Payments
                     , Http.Handler
                     , Http.Params
                     , Http.Routes.Brands
                     , Http.Routes.Items
                     , Http.Routes.Version
                     , Http.Server
                     , Logger
                     , Programs.Checkout
                     , Refined.Instances
                     , Resources
                     , Services
                     , Services.Brands
                     , Services.Items
                     , Services.Orders
                     , Services.ShoppingCart
                     , Utils.Text
  build-depends:       base
                     , aeson
                     , async
                     , bytestring
                     , co-log-core
                     , containers
                     , dhall
                     , exceptions
                     , hedis
                     , lens
                     , postgresql-simple
                     , raw-strings-qq
                     , refined
                     , servant
                     , servant-server
                     , template-haskell
                     , text
                     , uuid
                     , wai
                     , wai-cors
                     , warp
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010

executable shopping-cart
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.12 && <4.13
                     , shopping-cart
                     , refined
                     , template-haskell
                     , uuid
  default-language:    Haskell2010
