cabal-version:       >=1.10

name:                shopping-cart
version:             0.1.0.0
synopsis:            The Shopping Cart developed in PFP Scala for Haskell
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Domain.Brand
                     , Domain.Category
                     , Domain.Cart
                     , Domain.Checkout
                     , Domain.Item
                     , Domain.Order
                     , Domain.Payment
                     , Domain.User
                     , Http.Client
                     , Http.Clients.Payments
                     , Http.Params
                     , Http.Routes.Brands
                     , Http.Routes.Cart
                     , Http.Routes.Checkout
                     , Http.Routes.Items
                     , Http.Routes.Orders
                     , Http.Routes.Version
                     , Http.Server
                     , Logger
                     , Programs.Checkout
                     , Refined.Instances
                     , Resources
                     , Services
                     , Services.Brands
                     , Services.Items
                     , Services.Orders
                     , Services.ShoppingCart
                     , Utils.Lift
                     , Utils.Redis
                     , Utils.Text
  build-depends:       base
                     , aeson
                     , async
                     , bytestring
                     , co-log-core
                     , containers
                     , dhall
                     , exceptions
                     , hedis
                     , lens
                     , postgresql-simple
                     , raw-strings-qq
                     , refined
                     , retry
                     , servant
                     , servant-server
                     , template-haskell
                     , text
                     , unliftio
                     , utf8-string
                     , uuid
                     , wai
                     , wai-cors
                     , warp
                     , witherable
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010

test-Suite shopping-cart-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Payments.Test
                     , Utils.TextTest
  build-depends:       base >= 4.12 && <4.13
                     , hedgehog
                     , refined
                     , shopping-cart
                     , template-haskell
                     , text
                     , uuid
  default-language:     Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts -N

executable shopping-cart
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.12 && <4.13
                     , shopping-cart
  default-language:    Haskell2010
