cabal-version:       2.4

name:                shopping-cart
version:             0.1.0.0
synopsis:            The Haskell version of the original Shopping Cart developed in the Practical FP in Scala book
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Domain.Brand
                     , Domain.Category
                     , Domain.Cart
                     , Domain.Checkout
                     , Domain.Item
                     , Domain.Order
                     , Domain.Payment
                     , Domain.User
                     , Effects.Background
                     , Effects.Logger
                     , Effects.Retry
                     , Http.Client
                     , Http.Clients.Payments
                     , Http.Params
                     , Http.Routes.Brands
                     , Http.Routes.Cart
                     , Http.Routes.Checkout
                     , Http.Routes.Items
                     , Http.Routes.Orders
                     , Http.Routes.Version
                     , Http.Server
                     , Orphan
                     , Programs.Checkout
                     , Refined.HasDigits
                     , Refined.Helper
                     , Resources
                     , Services
                     , Services.Brands
                     , Services.Items
                     , Services.Orders
                     , Services.ShoppingCart
                     , Utils.Errors
                     , Utils.Redis
                     , Utils.Text
  build-depends:       base
                     , aeson
                     , async
                     , bytestring
                     , co-log-core
                     , containers
                     , dhall
                     , exceptions
                     , generic-lens
                     , hedis
                     , lens
                     , managed
                     , par-dual
                     , postgresql-simple
                     , prettyprinter
                     , raw-strings-qq
                     , refined
                     , retry
                     , servant
                     , servant-server
                     , template-haskell
                     , text
                     , utf8-string
                     , uuid
                     , wai
                     , wai-cors
                     , warp
                     , witherable
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-Suite shopping-cart-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Payments.Test
                     , Utils.TextTest
  build-depends:       base
                     , hedgehog
                     , refined
                     , shopping-cart
                     , template-haskell
                     , text
                     , uuid
  default-language:     Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts -N

executable shopping-cart
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , managed
                     , shopping-cart
  default-language:    Haskell2010
  ghc-options:         -Wall
